# anari-webgpu

./: CLAUDE.md  CMakeLists.txt  Object.cpp  Object.h  README.md  WebGPUDefinitions.json  WebGPUDevice.cpp  WebGPUDevice.h  WebGPUDeviceGlobalState.cpp  WebGPUDeviceGlobalState.h  WebGPULibrary.cpp  WebGPUMath.h
camera/: Camera.cpp  Camera.h
examples/: render_triangle.cpp
frame/: Frame.cpp  Frame.h
geometry/: Geometry.cpp  Geometry.h
light/: Light.cpp  Light.h
material/: Material.cpp  Material.h
renderer/: Renderer.cpp  Renderer.h
sampler/: Sampler.cpp  Sampler.h
spatial_field/: SpatialField.cpp  SpatialField.h
surface/: Surface.cpp  Surface.h
tests/: CMakeLists.txt  test_cubemap.cpp  test_gltf_scene.cpp  test_lights.cpp  test_materials.cpp  test_mesh_rendering.cpp  test_multi_light_rendering.cpp  test_object_lifecycle.cpp  test_pbr_rendering.cpp  test_triangle_rendering.cpp  test_volume_rendering.cpp
volume/: Volume.cpp  Volume.h
world/: Group.cpp  Group.h  Instance.cpp  Instance.h  World.cpp  World.h
